# CTS-SAT-1-OBC-Firmware

./: .gitattributes  .gitignore  .project  00__Getting__Started_8md.html  30__Repo__Organization_8md.html  40__Logging_8md.html  AX100__and__CubeSat__Space__Protocol_8md.html  C__General__Guidelines_8md.html  C__Namespaces_8md.html  C__Unit__Tests_8md.html  Configuration__Variables_8md.html  CubeSpace__ADCS__Notes_8md.html  Deployment__Final__Checks_8md.html  Doxyfile  Emulating__Subsystems_8md.html  Example-example.html  FreeRTOSConfig_8h.html  FreeRTOSConfig_8h_source.html  IOC__File__Updates_8md.html  IOC__Pin__List_8md.html  ISISpace__EPS__Notes_8md.html  If-example.html  Inc_2csp_2csp__promisc_8h.html  Inc_2csp_2csp__promisc_8h__incl.map  Inc_2csp_2csp__promisc_8h__incl.md5  Inc_2csp_2csp__promisc_8h_source.html  LittleFS__and__Flash__Notes__and__Lessons_8md.html  MPI__Emulator_8py.html  README.md  README_8md.html  RTE__Components_8h.html  RTE__Components_8h_source.html  Radio__Packet__Format_8md.html  STM32__Notes_8md.html  Setup__Guide__for__Windows__Arm64_8md.html  Src_2csp_2csp__promisc_8h.html  Src_2csp_2csp__promisc_8h__dep__incl.map  Src_2csp_2csp__promisc_8h__dep__incl.md5  Src_2csp_2csp__promisc_8h__incl.map  Src_2csp_2csp__promisc_8h__incl.md5  (+9073 more)
GSE/cgse/: .gitignore  CMakeLists.txt  base64.c  base64.h  cgse_startup_commands  command_history.c  command_history.h  command_queue.c  command_queue.h  commands.c  commands.h  main.c  main.c.old  main.h  telecommand_definitions.c  telecommand_examples.txt  terminal.c  terminal.h  test_commands.txt  update_cmake_cache.sh
GSE/cgse/include/: mpi_firmware.h
GSE/cgse/include/littlefs/: lfs.h  littlefs_helper.h
GSE/cgse/include/telecommands/: flash_telecommand_defs.h  lfs_telecommand_defs.h  telecommand_args_helpers.h  telecommand_definitions.h  timekeeping_telecommand_defs.h
GSE/cgse/include/timekeeping/: timekeeping.h
GSE/cgse/telecommands/: telecommand_args_helpers.h  telecommand_definitions.h
GSE/cgse/transforms/: arrays.h
GSE/cgse/unit_tests/: unit_test_executor.h
cmd_parser/: agenda.c  agenda.h  command_parse.c  command_parse.h  commands.c  commands.h
cts1_ground_support/: LICENSE  README.md  pyproject.toml
cts1_ground_support/firmware_checks/: _01_check_tcmd_structs_and_docs.py  _02_check_c_unit_test_inventory.py  _03_check_missing_tcmd_registrations.py
cts1_ground_support/src/cts1_ground_support/: __init__.py  __main__.py  bytes.py  paths.py  serial.py  telecommand_array_parser.py  telecommand_preview.py  telecommand_types.py
cts1_ground_support/src/cts1_ground_support/terminal_app/: __init__.py  app_config.py  app_store.py  app_types.py  dash_gui.py  serial_thread.py
cts1_ground_support/src/cts1_ground_support/terminal_app/assets/: footer.js
cts1_ground_support/tests/: README.txt  __init__.py  test_paths.py  test_telecommand_array_parser.py
docs/: 00_Getting_Started.md  30_Repo_Organization.md  40_Logging.md  50_Issues_For_Drivers_And_VSCode_STM32_Extensions.md  C Namespaces.md  C_General_Guidelines.md  C_Namespaces.md  C_Unit_Tests.md  Emulating_Subsystems.md  IOC_Pin_List.md  Telecommand_Feature_List.md  Telecommand_Spec.md  Testing Steps for Jumping to Golden Copy.md  Testing_Steps_for_Jumping_to_Golden_Copy.md  Troubleshooting.md
firmware/: .cproject  .env  .gitignore  .mxproject  .project  .stm32env  CTS-SAT-1_FW.ioc  Makefile  Makefile.GitHub.mk  STM32-for-VSCode.config.yaml  STM32L4R5XX_FLASH.ld  STM32L4R5ZITX_FLASH.ld  STM32L4R5ZITX_RAM.ld  STM32L4R5ZITx_FLASH.ld  STM32Make.make  STM32Make.make.copyto_STM32Make.make  openocd.cfg  stm32l4r5zitx_flash.ld
firmware_checks/: _01_check_tcmd_structs_and_docs.py  _02_check_c_unit_test_inventory.py  (+3 more)
misc_tools/exec_blob/demo_rust_blob_1/: Cargo.toml  Justfile  blob.ld  justfile
misc_tools/exec_blob/demo_rust_blob_1/.cargo/: config.toml
misc_tools/exec_blob/demo_rust_blob_1/src/: blob_main.rs
(+754 files in other folders)
