[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cts1_ground_support"
version = "v0-dev"
dependencies = [
  "GitPython",
  "pyserial",
  "loguru",
  "dash",
  "dash-bootstrap-components",
  "dash-split-pane~=1.0.0",
  "pytz",
]
requires-python = ">=3.10"
authors = [
  {name = "CalgaryToSpace"},
]
maintainers = [
  {name = "CalgaryToSpace"}
]
description = "CalgaryToSpace CTS-SAT-1 Ground Support Software"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["CalgaryToSpace", "satellite", "ground support", "space", "cubesat"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "twine",
  "wheel",
  "setuptools",
  "hatchling",
  "ruff",
  "coverage", # For CI.
]

[project.urls]
Homepage = "https://calgarytospace.ca/"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/CalgaryToSpace/CTS-SAT-1-OBC-Firmware"

[project.scripts]
cts1_ground_support = "cts1_ground_support:main"
cts1_terminal = "cts1_ground_support:main"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
# ignore = ["FIX002"]
ignore = ["TD002", "TD003", "FIX002", "COM812"]

[tool.ruff.lint.per-file-ignores]
# Source: https://github.com/astral-sh/ruff/issues/4368
"tests/**/*.py" = [
    "S101", # Asserts allowed in tests
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
